k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  labels:
    app: leptos-start
spec:
  replicas: 2
  selector:
    matchLabels:
      app: leptos-start
  template:
    metadata:
      labels:
        app: leptos-start
    spec:
      containers:
      - name: leptos
        image: wayeast/k8s-test
        ports:
        - containerPort: 3000
