k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: LoadBalancer
  selector:
    app: leptos-start
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 3000
